--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -8,22 +8,30 @@
     <View
         android:id="@+id/community_title_bg"
         android:layout_width="0dp"
-        android:layout_height="64dp"
+        android:layout_height="72dp"
         android:background="@drawable/color_g_blue1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-    <TextView
+
+    <EditText
         android:id="@+id/community_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="32dp"
+        android:paddingLeft="32dp"
         android:layout_marginBottom="8dp"
-        android:text="@string/community"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="48dp"
+        android:hint="@string/search"
         android:textColor="@color/white"
         android:textSize="18sp"
+        android:background="@drawable/bg_search_edit"
         app:layout_constraintBottom_toBottomOf="@id/community_title_bg"
         app:layout_constraintLeft_toLeftOf="@id/community_title_bg"
-        app:layout_constraintRight_toRightOf="@id/community_title_bg" />
+        app:layout_constraintRight_toRightOf="@id/community_title_bg"
+        android:focusable="true"
+        android:focusableInTouchMode="true"/>
+
 
     <!--<ScrollView
         android:layout_width="0dp"
@@ -39,14 +47,36 @@
             android:focusable="true"
             android:focusableInTouchMode="true">-->
 
-            <android.support.v7.widget.RecyclerView
+    <ImageView
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:src="@drawable/search"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="@id/community_title"
+        app:layout_constraintLeft_toLeftOf="@id/community_title"
+        app:layout_constraintTop_toTopOf="@id/community_title" />
+
+    <ImageView
+        android:id="@+id/iv_menu_community"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:src="@drawable/add"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="@id/community_title"
+        app:layout_constraintLeft_toRightOf="@id/community_title"
+        app:layout_constraintTop_toTopOf="@id/community_title"
+        app:layout_constraintRight_toRightOf="parent"/>
+
+    <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_community"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/community_title_bg"/>
+                app:layout_constraintTop_toBottomOf="@id/community_title_bg"
+                android:focusable="true"
+                android:focusableInTouchMode="true"/>
 
            <!-- </android.support.v7.widget.RecyclerView>
         </android.support.constraint.ConstraintLayout>
