--- a/app/src/main/res/layout/fragment_manager_top.xml
+++ b/app/src/main/res/layout/fragment_manager_top.xml
@@ -2,7 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <View
         android:id="@+id/manager_bg"
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="25dp"
-        android:text="Hello World"
+        android:text="雨过天晴"
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintLeft_toRightOf="@id/manager_avatar"
@@ -43,7 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="25dp"
         android:layout_marginLeft="20dp"
-        android:text="Hello World"
+        android:text="65830621"
         android:textColor="@color/cyan1"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@id/manager_avatar"
