--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,13 @@
     android:fitsSystemWindows="false"
     tools:openDrawer="start">
 
+
+
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="0dp"
         app:layout_constraintBottom_toTopOf="@+id/main_divide"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -23,7 +26,7 @@
         android:id="@+id/main_divide"
         android:layout_width="0dp"
         android:layout_height="0.5dp"
-        android:background="@color/glory"
+        android:background="@color/lightGlory"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/nav_bar"/>
@@ -67,6 +70,9 @@
             android:layout_height="match_parent"
             android:text="@string/manager" />
     </android.support.design.widget.TabLayout>
-
+    <include
+        android:id="@+id/search_main"
+        layout="@layout/search_main"
+        />
 
 </android.support.constraint.ConstraintLayout>
