--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.tiancheng.wewhisper.community.CommunityFragment">
 
-    <View
+    <!--<View
         android:id="@+id/community_title_bg"
         android:layout_width="0dp"
         android:layout_height="72dp"
@@ -22,7 +22,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="48dp"
-        android:hint="@string/search"
+        android:hint="@strsearch_mainarch"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:background="@drawable/bg_search_edit"
@@ -33,7 +33,7 @@
         android:focusableInTouchMode="true"/>
 
 
-    <!--<ScrollView
+    &lt;!&ndash;<ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -45,12 +45,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:focusable="true"
-            android:focusableInTouchMode="true">-->
+            android:focusableInTouchMode="true">&ndash;&gt;
 
     <ImageView
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:src="@drawable/search"
+        android:src="@drawasearch_mainarch"
         android:layout_marginStart="8dp"
         app:layout_constraintBottom_toBottomOf="@id/community_title"
         app:layout_constraintLeft_toLeftOf="@id/community_title"
@@ -65,7 +65,7 @@
         app:layout_constraintBottom_toBottomOf="@id/community_title"
         app:layout_constraintLeft_toRightOf="@id/community_title"
         app:layout_constraintTop_toTopOf="@id/community_title"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"/>-->
 
     <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_community"
@@ -74,8 +74,9 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/community_title_bg"
+                app:layout_constraintTop_toTopOf="parent"
                 android:focusable="true"
+                android:layout_marginTop="72dp"
                 android:focusableInTouchMode="true"/>
 
            <!-- </android.support.v7.widget.RecyclerView>
