--- a/app/src/main/res/layout/fragment_consult.xml
+++ b/app/src/main/res/layout/fragment_consult.xml
@@ -5,10 +5,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.tiancheng.wewhisper.consult.ConsultFragment">
 
-    <View
+    <!--<View
         android:id="@+id/consult_title_bg"
         android:layout_width="0dp"
-        android:layout_height="64dp"
+        android:layout_height="72dp"
         android:background="@drawable/color_g_blue1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -24,13 +24,14 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@id/consult_title_bg"
         app:layout_constraintLeft_toLeftOf="@id/consult_title_bg"
-        app:layout_constraintRight_toRightOf="@id/consult_title_bg" />
+        app:layout_constraintRight_toRightOf="@id/consult_title_bg" />-->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@id/consult_title_bg">
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="72dp">
         <include
             layout="@layout/item_consult" />
         <include
