--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent"
     tools:context="com.tiancheng.wewhisper.home.HomeFragment">
 
-    <View
+    <!--<View
         android:id="@+id/home_title_bg"
         android:layout_width="0dp"
-        android:layout_height="64dp"
+        android:layout_height="72dp"
         android:background="@drawable/color_g_blue1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -24,16 +24,71 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@id/home_title_bg"
         app:layout_constraintLeft_toLeftOf="@id/home_title_bg"
-        app:layout_constraintRight_toRightOf="@id/home_title_bg" />
+        app:layout_constraintRight_toRightOf="@id/home_title_bg" />-->
 
-    <VideoView
-        android:id="@+id/video_view"
+    <!-- <VideoView
+         android:id="@+id/video_view"
+         android:layout_width="0dp"
+         android:layout_height="200dp"
+         android:layout_margin="8dp"
+         app:layout_constraintLeft_toLeftOf="parent"
+         app:layout_constraintRight_toRightOf="parent"
+         app:layout_constraintTop_toBottomOf="@id/home_title_bg" />
+ -->
+
+    <ScrollView
+        android:id="@+id/sv_home"
         android:layout_width="0dp"
-        android:layout_height="200dp"
-        android:layout_margin="8dp"
+        android:layout_height="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/home_title_bg" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:focusable="true"
+            android:focusableInTouchMode="true">
+
+            <com.youth.banner.Banner
+                android:id="@+id/home_banner"
+                android:layout_width="0dp"
+                android:layout_height="156dp"
+                android:layout_marginTop="72dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+            </com.youth.banner.Banner>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_ic_bar_home"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/home_banner"
+                />
+
+            <include layout="@layout/title_expert"
+                android:id="@+id/expert_title_home"
+                android:layout_height="48dp"
+                android:layout_width="0dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_marginTop="16dp"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/rv_ic_bar_home" />
 
 
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_consult_home"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/expert_title_home" />
+
+        </android.support.constraint.ConstraintLayout>
+    </ScrollView>
 </android.support.constraint.ConstraintLayout>
