--- a/app/src/main/res/layout/fragment_test.xml
+++ b/app/src/main/res/layout/fragment_test.xml
@@ -5,50 +5,33 @@
     android:layout_height="match_parent"
     tools:context="com.tiancheng.wewhisper.test.TestFragment">
 
-    <View
-        android:id="@+id/test_title_bg"
-        android:layout_width="0dp"
-        android:layout_height="64dp"
-        android:background="@drawable/color_g_blue1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/test_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:text="@string/test"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@id/test_title_bg"
-        app:layout_constraintLeft_toLeftOf="@id/test_title_bg"
-        app:layout_constraintRight_toRightOf="@id/test_title_bg" />
 
-    <ScrollView
+    <!--<ScrollView
         android:id="@+id/sv_test"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/test_title_bg">
+        app:layout_constraintTop_toTopOf="parent">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:focusable="true"
-            android:focusableInTouchMode="true">
+            android:focusableInTouchMode="true">-->
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_test"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
-        </android.support.constraint.ConstraintLayout>
-    </ScrollView>
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="72dp"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+       <!-- </android.support.constraint.ConstraintLayout>
+    </ScrollView>-->
 
 </android.support.constraint.ConstraintLayout>
