--- a/app/src/main/res/layout/item_test.xml
+++ b/app/src/main/res/layout/item_test.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="114dp"
+    android:layout_height="100dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white">
 
     <ImageView
         android:id="@+id/iv_item_test"
-        android:layout_width="96dp"
-        android:layout_height="72dp"
-        android:layout_marginLeft="8dp"
+        android:layout_height="match_parent"
+        android:layout_width="100dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="8dp"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -19,8 +21,8 @@
         android:id="@+id/tv_title_item_test"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="112dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="120dp"
         android:ellipsize="end"
         android:maxLines="1"
         android:textColor="@color/black"
@@ -37,12 +39,11 @@
         android:id="@+id/tv_content_item_test"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="112dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="120dp"
         android:ellipsize="end"
         android:maxLines="2"
         android:textColor="@color/glory"
-        android:textSize="16sp"
+        android:textSize="14sp"
         android:layout_marginEnd="8dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toEndOf="@id/iv_item_test"
