--- a/app/src/main/res/menu/menu_community.xml
+++ b/app/src/main/res/menu/menu_community.xml
@@ -3,11 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/menu_publish_circle"
+        android:id="@+id/menu_circle"
+        android:icon="@drawable/circle"
         android:orderInCategory="100"
         android:title="@string/circleManager"
-        app:showAsAction="never"
-        android:icon="@drawable/circle" />
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/menu_publish_new"
